@@ -254,6 +254,7 @@ typedef void *(*CamelCopyFunc)(const void *vo);
 
 CamelObjectBag *camel_object_bag_new(GHashFunc hash, GEqualFunc equal, CamelCopyFunc keycopy, GFreeFunc keyfree);
 void *camel_object_bag_get(CamelObjectBag *bag, const void *key);
+void *camel_object_bag_peek(CamelObjectBag *bag, const void *key);
 void *camel_object_bag_reserve(CamelObjectBag *bag, const void *key);
 void camel_object_bag_add(CamelObjectBag *bag, const void *key, void *o);
 void camel_object_bag_abort(CamelObjectBag *bag, const void *key);
